--- a/src/style/about-me.scss
+++ b/src/style/about-me.scss
@@ -38,6 +38,12 @@
 @include devices(mobile-1) {
 	.about--ts {
 		grid-area: 1/1/3/1;
+		gap: 0;
+		& br {
+			display: block;
+			content: "";
+			margin-top: 0;
+		}
 	}
 }
 @include devices(desktop-1) {
